fix: some fixies
